--- a/tests/ci-tool-versions.env
+++ b/tests/ci-tool-versions.env
@@ -1,3 +1,3 @@
-export PHPSTAN_VERSION=1.4.9
-export PSALM_VERSION=4.22.0
-export PHAN_VERSION=5.3.2
+PHPSTAN_VERSION=1.4.9
+PSALM_VERSION=4.22.0
+PHAN_VERSION=5.3.2
