--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,26 +33,23 @@ jobs:
       - run:
           name: Check if there are newer images on Docker Hub
           command: |
-            REPO=elabftw/elabimg
-            TAG=hypernext
-            TOKEN=$(curl -s "https://auth.docker.io/token?service=registry.docker.io&scope=repository:$REPO:pull" \
+            echo 'export MYSQL_VERSION="$(cat tests/docker-compose.yml | grep -m 1 'image: mysql:' | awk -F : '{print $3}')"' >> $BASH_ENV
+            TOKEN=$(curl -s "https://auth.docker.io/token?service=registry.docker.io&scope=repository:elabftw/elabimg:pull" \
               | jq -r .token)
-            IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer $TOKEN" \
+            IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer ${TOKEN}" \
               -H "Accept: application/vnd.docker.distribution.manifest.v2+json" \
-              https://index.docker.io/v2/$REPO/manifests/$TAG \
+              https://index.docker.io/v2/elabftw/elabimg/manifests/hypernext \
               | jq -r .config.digest)
-            echo $IMAGE_DIGEST >> elabimg-key.txt
-            echo $IMAGE_DIGEST >> elabcibase-key.txt
+            echo ${IMAGE_DIGEST} >> elabimg-key.txt
+            echo ${IMAGE_DIGEST} >> elabcibase-key.txt
             sha256sum tests/ci-tool-versions.env >> elabcibase-key.txt
-            REPO=library/mysql
-            TAG=8.0
-            TOKEN=$(curl -s "https://auth.docker.io/token?service=registry.docker.io&scope=repository:$REPO:pull" \
+            TOKEN=$(curl -s "https://auth.docker.io/token?service=registry.docker.io&scope=repository:library/mysql:pull" \
               | jq -r .token)
-            IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer $TOKEN" \
+            IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer ${TOKEN}" \
               -H "Accept: application/vnd.docker.distribution.manifest.v2+json" \
-              https://index.docker.io/v2/$REPO/manifests/$TAG \
+              https://index.docker.io/v2/library/mysql/manifests/${MYSQL_VERSION} \
               | jq -r .config.digest)
-            echo $IMAGE_DIGEST >> mysql-key.txt
+            echo ${IMAGE_DIGEST} >> mysql-key.txt
       # todo: only load elabimg from cache if elabcibase is change because of a change in ci-tool-versions
       - restore_cache:
           keys:
@@ -68,20 +65,23 @@ jobs:
           command: |
             echo 'export HAS_ELABCIBASE_CACHE="false"' >> $BASH_ENV
             if [ -f ./elabcibase.tar ]; then
+              echo "Loading elabftw/elabcibase:latest ..."
               docker image load -q -i elabcibase.tar
               rm elabcibase.tar
               echo 'export HAS_ELABCIBASE_CACHE="true"' >> $BASH_ENV
             fi
             echo 'export HAS_ELABIMG_CACHE="false"' >> $BASH_ENV
             if [ "${HAS_ELABCIBASE_CACHE}" == "false" ] && [ -f ./elabimg-hypernext.tar ]; then
+              echo "Loading elabftw/elabimg:hypernext ..."
               docker image load -q -i elabimg-hypernext.tar
               rm elabimg-hypernext.tar
               echo 'export HAS_ELABIMG_CACHE="true"' >> $BASH_ENV
             fi
             echo 'export HAS_MYSQL_CACHE="false"' >> $BASH_ENV
-            if [ -f ./mysql-8.0.tar ]; then
-              docker image load -q -i mysql-8.0.tar
-              rm mysql-8.0.tar
+            if [ -f ./mysql.tar ]; then
+              echo "Loading mysql:${MYSQL_VERSION} ..."
+              docker image load -q -i mysql.tar
+              rm mysql.tar
               echo 'export HAS_MYSQL_CACHE="true"' >> $BASH_ENV
             fi
       - run:
@@ -102,7 +102,7 @@ jobs:
             if [ "${HAS_ELABCIBASE_CACHE}" == "false" ]; then
               . ./tests/ci-tool-versions.env
               docker image pull -q elabftw/elabimg:hypernext
-              docker build -t elabftw/elabcibase:latest \
+              docker build -q -t elabftw/elabcibase:latest \
                 -f tests/scrutinizer.dockerfile \
                 --build-arg PHPSTAN_VERSION \
                 --build-arg PSALM_VERSION \
@@ -111,7 +111,7 @@ jobs:
                 --cache-from elabftw/elabimg:hypernext \
                 --target elabcibase .
             fi
-            docker build -t elabtmp \
+            docker build -q -t elabtmp \
               -f tests/scrutinizer.dockerfile \
               --cache-from elabftw/elabcibase:latest \
               --target elabtmp .
@@ -120,16 +120,19 @@ jobs:
           command: |
             docker compose --ansi never -f tests/docker-compose.yml up -d --quiet-pull
       - run:
-          name: Save docker images elabimg and mysql for cache
+          name: Save docker images for cache
           command: |
             if [ "${HAS_ELABCIBASE_CACHE}" == "false" ] && [ "${HAS_ELABIMG_CACHE}" == "false" ]; then
+              echo "Saving elabftw/elabimg:hypernext to elabimg-hypernext.tar"
               docker image save -o elabimg-hypernext.tar elabftw/elabimg:hypernext
             fi
             if [ "${HAS_ELABCIBASE_CACHE}" == "false" ]; then
+              echo "Saving elabftw/elabcibase:latest to elabcibase.tar"
               docker image save -o elabcibase.tar elabftw/elabcibase:latest
             fi
             if [ "${HAS_MYSQL_CACHE}" == "false" ]; then
-              docker image save -o mysql-8.0.tar mysql:8.0
+              echo "Saving mysql:${MYSQL_VERSION} to mysql.tar"
+              docker image save -o mysql.tar mysql:${MYSQL_VERSION}
             fi
       - save_cache:
           key: v0.1-elabimg-dep-{{ checksum "elabimg-key.txt" }}
@@ -142,7 +145,7 @@ jobs:
       - save_cache:
           key: v1-mysql-dep-{{ checksum "mysql-key.txt" }}
           paths:
-            - ./mysql-8.0.tar
+            - ./mysql.tar
       # Restore dependency cache
       - restore_cache:
           keys:
