--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,9 @@ jobs:
       - run:
           name: Check if there are newer images on Docker Hub
           command: |
-            echo 'export MYSQL_VERSION="$(cat tests/docker-compose.yml | grep -m 1 'image: mysql:' | awk -F : '{print $3}')"' >> $BASH_ENV
+            MYSQL_VERSION="$(cat tests/docker-compose.yml | grep -m 1 'image: mysql:' | awk -F : '{print $3}')"
+            echo "MySQL Version: ${MYSQL_VERSION}"
+            echo 'export MYSQL_VERSION=${MYSQL_VERSION}' >> $BASH_ENV
             TOKEN=$(curl -s "https://auth.docker.io/token?service=registry.docker.io&scope=repository:elabftw/elabimg:pull" \
               | jq -r .token)
             IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer ${TOKEN}" \
@@ -63,12 +65,14 @@ jobs:
       - run:
           name: Load docker images from cache
           command: |
-            echo 'export HAS_ELABCIBASE_CACHE="false"' >> $BASH_ENV
+            HAS_ELABCIBASE_CACHE="false"
+            echo 'export HAS_ELABCIBASE_CACHE=${HAS_ELABCIBASE_CACHE}' >> $BASH_ENV
             if [ -f ./elabcibase.tar ]; then
               echo "Loading elabftw/elabcibase:latest ..."
               docker image load -q -i elabcibase.tar
               rm elabcibase.tar
-              echo 'export HAS_ELABCIBASE_CACHE="true"' >> $BASH_ENV
+              HAS_ELABCIBASE_CACHE="true"
+              echo 'export HAS_ELABCIBASE_CACHE=${HAS_ELABCIBASE_CACHE}' >> $BASH_ENV
             fi
             echo 'export HAS_ELABIMG_CACHE="false"' >> $BASH_ENV
             if [ "${HAS_ELABCIBASE_CACHE}" == "false" ] && [ -f ./elabimg-hypernext.tar ]; then
