--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           command: |
             MYSQL_VERSION="$(cat tests/docker-compose.yml | grep -m 1 'image: mysql:' | awk -F : '{print $3}')"
             echo "MySQL Version: ${MYSQL_VERSION}"
-            echo 'export MYSQL_VERSION=${MYSQL_VERSION}' >> $BASH_ENV
+            echo "export MYSQL_VERSION=${MYSQL_VERSION}" >> $BASH_ENV
             TOKEN=$(curl -s "https://auth.docker.io/token?service=registry.docker.io&scope=repository:elabftw/elabimg:pull" \
               | jq -r .token)
             IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer ${TOKEN}" \
@@ -66,13 +66,13 @@ jobs:
           name: Load docker images from cache
           command: |
             HAS_ELABCIBASE_CACHE="false"
-            echo 'export HAS_ELABCIBASE_CACHE=${HAS_ELABCIBASE_CACHE}' >> $BASH_ENV
+            echo "export HAS_ELABCIBASE_CACHE=${HAS_ELABCIBASE_CACHE}" >> $BASH_ENV
             if [ -f ./elabcibase.tar ]; then
               echo "Loading elabftw/elabcibase:latest ..."
               docker image load -q -i elabcibase.tar
               rm elabcibase.tar
               HAS_ELABCIBASE_CACHE="true"
-              echo 'export HAS_ELABCIBASE_CACHE=${HAS_ELABCIBASE_CACHE}' >> $BASH_ENV
+              echo "export HAS_ELABCIBASE_CACHE=${HAS_ELABCIBASE_CACHE}" >> $BASH_ENV
             fi
             echo 'export HAS_ELABIMG_CACHE="false"' >> $BASH_ENV
             if [ "${HAS_ELABCIBASE_CACHE}" == "false" ] && [ -f ./elabimg-hypernext.tar ]; then
