--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - image: cimg/base:current
         auth:
           username: nicolascarpi
-          password: $DOCKERHUB_PASSWORD
+          password: $DOCKERHUB_PULL_TOKEN
     steps:
       - checkout
       - setup_remote_docker:
