use remote docker v20.10.12 on circle ci, disable DLC DLC is behind a paywall

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,8 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          version: 20.10.11
-          docker_layer_caching: true # DLC will explicitly cache layers here and try to avoid rebuilding.
+          version: 20.10.12
+          # docker_layer_caching: true # DLC will explicitly cache layers here and try to avoid rebuilding.
       - run:
           name: Prepare docker-compose.yml
           # Don't bind mount here, files are copied. See scrutinizer.dockerfile
