--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "stream-browserify": "^3.0.0",
     "timers-browserify": "^2.0.12",
     "tinymce": "^5.10.0",
+    "tributejs": "^5.1.3",
     "ts-loader": "^9.1.1",
     "typescript": "^4.0.3",
     "ve-range-utils": "^2.6.3",
