put factory classes in factories namespace

--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,9 @@
       "Elabftw\\Exceptions\\": [
         "src/exceptions"
       ],
+      "Elabftw\\Factories\\": [
+        "src/factories"
+      ],
       "Elabftw\\Interfaces\\": [
         "src/interfaces"
       ],
