fix sonar issues

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
 # must be unique in a given SonarQube instance
 sonar.sources=.
-sonar.exclusions=src/js/tinymce-plugin/*,src/scss/fontawesome/*,tests/_data/*,tests/_generated/*,tests/_output/*,tests/_support/*
+sonar.exclusions=src/js/tinymce-plugins/**,src/scss/fontawesome/*,tests/**
+sonar.tests=tests
+sonar.php.coverage.reportPaths=tests/_output/coverage.xml
