--- a/codeception.yml
+++ b/codeception.yml
@@ -14,6 +14,7 @@ paths:
     data: tests/_data
     support: tests/_support
     envs: tests/_envs
+    output: tests/_output
 bootstrap: _bootstrap.php
 settings:
     colors: true
