disable api coverage for now until we get it to work properly

--- a/tests/apiv2.suite.yml
+++ b/tests/apiv2.suite.yml
@@ -1,4 +1,6 @@
 actor: Apiv2Tester
+coverage:
+  enabled: false # disabled until the c3 stuff can be figured out
 modules:
   enabled:
         - \Helper\Api
