--- a/tests/apiv2.suite.yml
+++ b/tests/apiv2.suite.yml
@@ -1,6 +1,12 @@
 actor: Apiv2Tester
 coverage:
-  enabled: false # disabled until the c3 stuff can be figured out
+  enabled: true
+  c3_url: 'https://elabtmp'
+  remote_context_options:
+    ssl:
+      verify_peer: false
+      verify_peer_name: false
+      allow_self_signed: true
 modules:
   enabled:
         - \Helper\Api
