--- a/package.json
+++ b/package.json
@@ -94,8 +94,8 @@
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
     "ove": "mkdir -p web/assets/ove/ && cp node_modules/@deltablot/open-vector-editor-umd/* web/assets/ove/ && rm -f web/assets/ove/open-vector-editor.js*",
     "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
-    "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --using-cache=no",
-    "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation --using-cache=no",
+    "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
+    "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
     "phpmetrics": "phpmetrics --report-html=metrics . && firefox metrics/index.html",
     "phpstan": "phpstan analyse --no-progress --memory-limit 4G -c src/tools/phpstan.neon",
     "pre-commit": "yarn static && yarn phpcs-dry && yarn csslint && yarn jslint",
