--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -6,7 +6,9 @@ version: '3'
 services:
 # our first container is nginx + php-fpm + elabftw
     web:
-        image: elabftw/elabimg:hypernext
+        build:
+          context: .
+          dockerfile: ./elabtmp.Dockerfile
         container_name: elabtmp
         # drop some capabilities
         cap_drop:
