--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,11 +31,99 @@ jobs:
           # docker_layer_caching: true # DLC will explicitly cache layers here and try to avoid rebuilding.
           # docker_layer_caching is behind a paywall
       - run:
-          name: Run tests
-          command: tests/run.sh
+          name: Prepare docker-compose.yml
+          # Don't bind mount here, files are copied. See scrutinizer.dockerfile
+          # It is NOT possible to bind mount with the docker container in circleci!
+          # See: https://circleci.com/docs/building-docker-images#mounting-folders
+          # first backslash enables different delimiter than slash
+          # remove env_file section
+          command: |
+            sed -i '\#volumes:#D' tests/docker-compose.yml
+            sed -i '\#- \.\.:/elabftw#D' tests/docker-compose.yml
+            sed -i '\#env_file:#D' tests/docker-compose.yml
+            sed -i '\#- elabftw-user\.env#D' tests/docker-compose.yml
+      - run:
+          name: Build elabtmp image and start containers
+          command: |
+            docker build -q -t elabtmp -f tests/elabtmp.Dockerfile .
+            docker compose --ansi never -f tests/docker-compose.yml up -d --quiet-pull
+      # Restore dependency cache
+      - restore_cache:
+          keys:
+            # This branch if available
+            - v1-yarn-dep-{{ .Branch }}-{{ checksum "yarn.lock" }}
+            # Default branch if not
+            - v1-yarn-dep-master-
+            # Any branch if there are none on the default branch
+            - v1-yarn-dep-
+      - run:
+          name: Copy dependency cache into container
+          command: |
+            echo 'export HAS_CACHE="false"' >> $BASH_ENV
+            if [ -d ./node_modules ]; then
+              docker cp ./node_modules elabtmp:/elabftw/node_modules
+            fi
+            if [ -d ./yarn.cache ]; then
+              docker cp ./yarn.cache elabtmp:/usr/local/share/.cache/yarn/
+              echo 'export HAS_CACHE="true"' >> $BASH_ENV
+            fi
+      - run:
+          name: Install JS dependencies
+          command: docker exec -it elabtmp yarn install --silent --non-interactive --frozen-lockfile
+      - run:
+          name: Extract dependency cache from container
+          command: |
+            if [ "${HAS_CACHE}" == "false" ]; then
+              docker cp elabtmp:/elabftw/node_modules/ ./node_modules
+              docker cp elabtmp:/usr/local/share/.cache/yarn/ ./yarn.cache
+            fi
+      # Save dependency cache
+      - save_cache:
+          key: v1-yarn-dep-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          paths:
+            - ./node_modules
+            - ./yarn.cache
+      - run:
+          name: Run SCSS linter
+          command: docker exec -it elabtmp yarn csslint
+      - run:
+          name: Run Javascript linter
+          command: docker exec -it elabtmp yarn jslint-ci
+      - run:
+          name: Build all
+          command: docker exec -it elabtmp yarn buildall:dev
+      - run:
+          name: Composer install
+          command: docker exec -it elabtmp composer install --no-progress -q
+      - run:
+          name: Run PHP-CS-Fixer
+          command: docker exec -it elabtmp yarn phpcs-dry
+      - run:
+          name: Prepare php.ini
+          # allow tmpfile, used by phpstan
+          # extend open_basedir
+          # /usr/bin/psalm, //autoload.php, /root/.cache/ are for psalm
+          # /usr/bin/phpstan, /proc/cpuinfo is for phpstan, https://github.com/phpstan/phpstan/issues/4427 https://github.com/phpstan/phpstan/issues/2965
+          command: |
+            docker exec -it elabtmp sed -i 's/tmpfile, //' /etc/php81/php.ini
+            docker exec -it elabtmp sed -i 's|^open_basedir*|&:/usr/bin/psalm://autoload\.php:/root/\.cache/:/usr/bin/phpstan:/proc/cpuinfo|' /etc/php81/php.ini
+      - run:
+          name: "PHP static analysis: psalm + phpsatn"
+          command: docker exec -it elabtmp yarn static
+      - run:
+          name: Install the database
+          command: docker exec -it elabtmp bin/install start -r
+      - run:
+          name: Populate the database
+          command: docker exec -it elabtmp bin/console dev:populate tests/populate-config.yml
+      - run:
+          name: Run unit tests
+          command: docker exec -it elabtmp php vendor/bin/codecept run --coverage --coverage-xml
+      - run:
+          name: Extract coverage report
+          command: docker cp elabtmp:/elabftw/tests/_output/coverage.xml .
       - codecov/upload:
           file: coverage.xml
-
 workflows:
   version: 2
   build_and_test:
