--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,31 +42,33 @@ jobs:
             sed -i '\#- \.\.:/elabftw#D' tests/docker-compose.yml
             sed -i '\#env_file:#D' tests/docker-compose.yml
             sed -i '\#- elabftw-user\.env#D' tests/docker-compose.yml
+            sed -i 's#elabtmp#circleci#' tests/docker-compose.yml
       - run:
           name: Build elabtmp image and start containers
           command: |
             docker build -q -t elabtmp -f tests/elabtmp.Dockerfile .
+            docker build -q -t circleci -f tests/circleci.Dockerfile .
             docker compose --ansi never -f tests/docker-compose.yml up -d --quiet-pull
       # Restore dependency cache
-      - restore_cache:
-          keys:
-            # This branch if available
-            - v1-yarn-dep-{{ .Branch }}-{{ checksum "yarn.lock" }}
-            # Default branch if not
-            - v1-yarn-dep-master-
-            # Any branch if there are none on the default branch
-            - v1-yarn-dep-
-      - run:
-          name: Copy dependency cache into container
-          command: |
-            echo 'export HAS_CACHE="false"' >> $BASH_ENV
-            if [ -d ./node_modules ]; then
-              docker cp ./node_modules elabtmp:/elabftw/node_modules
-            fi
-            if [ -d ./yarn.cache ]; then
-              docker cp ./yarn.cache elabtmp:/usr/local/share/.cache/yarn/
-              echo 'export HAS_CACHE="true"' >> $BASH_ENV
-            fi
+      #- restore_cache:
+      #    keys:
+      #      # This branch if available
+      #      - v1-yarn-dep-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      #      # Default branch if not
+      #      - v1-yarn-dep-master-
+      #      # Any branch if there are none on the default branch
+      #      - v1-yarn-dep-
+      #- run:
+      #    name: Copy dependency cache into container
+      #    command: |
+      #      echo 'export HAS_CACHE="false"' >> $BASH_ENV
+      #      if [ -d ./node_modules ]; then
+      #        docker cp ./node_modules elabtmp:/elabftw/node_modules
+      #      fi
+      #      if [ -d ./yarn.cache ]; then
+      #        docker cp ./yarn.cache elabtmp:/usr/local/share/.cache/yarn/
+      #        echo 'export HAS_CACHE="true"' >> $BASH_ENV
+      #      fi
       - run:
           name: Install JS dependencies
           command: docker exec -it elabtmp yarn install --silent --non-interactive --frozen-lockfile
