--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -6,6 +6,7 @@ version: '3'
 services:
 # our first container is nginx + php-fpm + elabftw
     web:
+        image: elabtmp
         build:
           context: .
           dockerfile: ./elabtmp.Dockerfile
