allow cache for first elabtmp

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - run:
           name: Build elabtmp image and start containers
           command: |
-            docker build -q --no-cache -t elabtmp -f tests/elabtmp.Dockerfile .
+            docker build -q -t elabtmp -f tests/elabtmp.Dockerfile .
             docker build -q --no-cache -t elabtmp -f tests/circleci.Dockerfile .
             docker compose --ansi never -f tests/docker-compose.yml up -d --quiet-pull
       # Restore dependency cache
